# agent-cli

./: .gitignore  README.txt  dircolors.txt  utils.py
adk/: README.md  (+1 more)
agent-harness/adk-agent/: Containerfile  Containerfile.agent  Containerfile.web  README.md  adk_agent.py  entrypoint.sh  pyproject.toml  web_app.py
agent-harness/adk-agent/deployment/: README.md  adk-agent-job-instruction.md  adk-agent-job-pvc-template.yaml  adk-agent-job-template.yaml  adk-agent-job.yaml  deployment.yaml  pvc.yaml  route.yaml  secret-api-keys.yaml  service.yaml
agent-harness/adk-agent/input/: pb-2026-004.txt
agent-harness/adk-agent/output/: EXECUTION_SUMMARY.txt  build-summary.md  pb-2026-002.yml  pb-2026-004.yml
agent-harness/adk-agent/sample-jobs/: SKILL-sensitive-info.md
agent-harness/adk-agent/sample-jobs/ascii-jpeg-art/agent/: instruction.md
agent-harness/adk-agent/sample-jobs/rhel-service-failure-recovery/agent/: instruction.md
agent-harness/adk-agent/sample-jobs/windows-sql-server-recovery/agent/: instruction.md
agent-harness/adk-agent/templates/: index.html
agent-harness/claude-agent/: Containerfile  README.md  claude_agent.py  entrypoint.sh  pyproject.toml  web_app.py
agent-harness/claude-agent/deployment/: README.md  claude-agent-job-instruction.md  claude-agent-job-pvc-template.yaml  claude-agent-job-template.yaml  deployment.yaml  pvc.yaml  route.yaml  secret-api-keys.yaml  service.yaml
agent-harness/claude-agent/output/: build-summary.md  pb-2026-002.yml
agent-harness/claude-agent/templates/: index.html
agent-harness/pydantic-agent/: Containerfile  README.md  entrypoint.sh  main.py  pydantic_agent.py  pydantic_agent_tutorial.ipynb  pyproject.toml  requirements.txt  web_app.py
agent-harness/pydantic-agent/deployment/: README.md
agent-harness/pydantic-agent/output/outbox/: build-summary.md  pb-2026-002.yml
agent-harness/pydantic-agent/templates/: index.html
agy/wrk/antigravity-sdk-python/: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
agy/wrk/antigravity-sdk-python/examples/: README.md
agy/wrk/antigravity-sdk-python/examples/deep_dives/: README.md  agent_middleware.py  async_chat.py  doc_maintenance_agent.py  docstring_maintenance_agent.py  host_tool_hooks.py  interactive_cli.py  multimodal_pipeline.py  round_based_chat.py
agy/wrk/antigravity-sdk-python/examples/getting_started/: README.md  agent_skills.py  app_data_dir_override.py  autonomous_shell.py  custom_tools.py  error_handler.py  hello_world.py  hooks.py  human_in_the_loop.py  mcp_tools.py  multimodal.py  observability.py  persistence.py  persona_config.py  policies.py  streaming.py  structured_output.py  subagents.py  triggers.py
agy/wrk/antigravity-sdk-python/examples/resources/: mcp_server.py  sample_doc.txt
agy/wrk/antigravity-sdk-python/google/antigravity/: __init__.py  agent.py  agent_test.py  types.py  types_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/connections/: README.md  __init__.py  connection.py  connection_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/conversation/: README.md  conversation.py  conversation_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/hooks/: README.md  __init__.py  hook_runner.py  hook_runner_test.py  hooks.py  hooks_test.py  policy.py  policy_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/mcp/: README.md  __init__.py  bridge.py  bridge_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/tools/: README.md  tool_context.py  tool_context_test.py  tool_runner.py  tool_runner_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/triggers/: README.md  __init__.py  helpers.py  helpers_test.py  trigger_runner.py  trigger_runner_test.py  triggers.py  triggers_test.py
agy/wrk/antigravity-sdk-python/google/antigravity/utils/: __init__.py  interactive.py  interactive_test.py
agy/wrk/antigravity-sdk-python/skills/: README.md
agy/wrk/antigravity-sdk-python/skills/google-antigravity-sdk/: SKILL.md
crewai/wrk/crew_agents/: README.md  pyproject.toml
crewai/wrk/crew_agents/src/crew_agents/: crew.py  main.py
crewai/wrk/crew_agents/src/crew_agents/config/: agents.yaml
cursor/wrk/claude-agent/: claude_agent.py  pyproject.toml  web_app.py
cursor/wrk/claude-agent/outbox/: file3.html
cursor/wrk/claude-agent/templates/: index.html
cursor/wrk/claude-agent/workshop/advanced/: 04_guardrail.md
cursor/wrk/claude-agent/workshop/beginner/: 01_explore.md  03_add_tool.md
(+235 files in other folders)
