[project]
name = "adk-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.0.0",
    "google-adk[extensions]>=1.0",
    "httpx>=0.27.0",
    "playwright>=1.60.0",
    "werkzeug>=3.1.0",
]
