[project]
name = "claude-agent"
version = "0.1.0"
description = "Claude Agent Harness — file-processing agent powered by claude-agent-sdk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "anyio>=4.0.0",
    "claude-agent-sdk>=0.1.80",
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "mcp>=1.27.0",
    "werkzeug>=3.1.0",
]
