[project]
name = "pydantic-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.0.0",
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "mistralai>=1.0.0",
    "openai>=1.0.0",
    "pydantic-ai>=0.2.0",
    "werkzeug>=3.1.0",
]
