# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-antigravity"
version = "0.1.1"
description = "Google Antigravity SDK for building AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Google LLC"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "absl-py",
    "google-genai>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "uvicorn>=0.46",
    "websockets>=12.0",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Google-Antigravity/antigravity-sdk-python"

# The Copybara export places the SDK source at the repo root under the
# google/antigravity/ namespace package. setuptools auto-discovers all
# google.antigravity.* subpackages.
[tool.setuptools.packages.find]
include = ["google*"]

# Include the pre-compiled Go binary in the wheel.
# The release script places the platform-appropriate binary at
# google/antigravity/bin/localharness before building each wheel.
[tool.setuptools.package-data]
"google.antigravity.bin" = ["*"]


