[project]
name = "claude-agent"
version = "0.1.0"
description = "Web-based file-processing agent powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "claude-agent-sdk",
    "httpx>=0.27",
]

[project.scripts]
claude-agent-web = "web_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
